--- a/index.html
+++ b/index.html
@@ -747,75 +747,75 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8">
-          <h2 class="heading">Making  events   memorable</h2>
+          <h2 class="heading text-center">Creating Memorable Events</h2>
           <hr class="heading_space">
           <div class="slider_wrap">
             <div id="service-slider" class="owl-carousel">
               <div class="item">
                 <div class="item_inner">
                   <div class="image">
-                    <img src="images/wJ4pMay2nh0j.jpg" alt="Services Image">
+                    <img src="images/wJ4pMay2nh0j.jpg" alt="Weddings">
                     <a href="#"></a>
                   </div>
                   <h3><a href="#">Weddings</a></h3>
-                  <p>Make your wedding a taste sensation—where every bite is filled with love and each moment turns into
-                    a cherished memory.</p>
+                  <p>Experience the magic of a perfect wedding feast. We craft personalized menus that blend tradition
+                    with elegance, ensuring your special day is truly unforgettable.</p>
                 </div>
               </div>
               <div class="item">
                 <div class="item_inner">
                   <div class="image">
-                    <img src="images/4k0fzHpzEB0B.jpg" alt="Services Image">
+                    <img src="images/4k0fzHpzEB0B.jpg" alt="Birthday Parties">
                     <a href="#"></a>
                   </div>
-                  <h3><a href="#">Birthday Parties</a></h3>
-                  <p>Celebrate birthdays in style—enjoy joy-filled plates and sweet moments that make every celebration
-                    memorable and delightful.</p>
+                  <h3><a href="#">Birthday Bashes</a></h3>
+                  <p>From first birthdays to milestones, we bring the fun with delicious treats and vibrant setups that
+                    delight guests of all ages.</p>
                 </div>
               </div>
               <div class="item">
                 <div class="item_inner">
                   <div class="image">
-                    <img src="images/bBLYbDv8ry4j.jpg" alt="Services Image">
+                    <img src="images/bBLYbDv8ry4j.jpg" alt="Traditional Ceremonies">
                     <a href="#"></a>
                   </div>
-                  <h3><a href="#">Traditional Ceremonies</a></h3>
-                  <p>Add flavor to cultural ceremonies—blending tradition with tasty modern twists, creating a special
-                    and enjoyable experience for your big day.</p>
+                  <h3><a href="#">Traditional Feasts</a></h3>
+                  <p>Honoring your heritage with authentic recipes and classic flavors. We serve tradition on a plate
+                    with warmth and respect.</p>
                 </div>
               </div>
               <div class="item">
                 <div class="item_inner">
                   <div class="image">
-                    <img src="images/MV6RNUbt0UPZ.jpg" alt="Services Image">
+                    <img src="images/MV6RNUbt0UPZ.jpg" alt="Housewarming">
                     <a href="#"></a>
                   </div>
                   <h3><a href="#">Housewarming</a></h3>
-                  <p>Warm your new home—create a tasty housewarming with delicious cuisine, turning every corner into a
-                    welcoming haven for family and friends.</p>
+                  <p>Welcome friends and family to your new home with a comforting and plentiful spread that signifies
+                    new beginnings.</p>
                 </div>
               </div>
 
               <div class="item">
                 <div class="item_inner">
                   <div class="image">
-                    <img src="images/BrJOAuXgq85L.jpg" alt="Services Image">
+                    <img src="images/BrJOAuXgq85L.jpg" alt="Private Parties">
                     <a href="#"></a>
                   </div>
-                  <h3><a href="#">Private Parties</a></h3>
-                  <p>For intimate gatherings—craft exclusive culinary moments, ensuring each bite is sophisticated and
-                    tailored to your preferences for a special occasion.</p>
+                  <h3><a href="#">Private Gatherings</a></h3>
+                  <p>Intimate and exclusive catering for your private moments. We ensure privacy, luxury, and exquisite
+                    taste in every detail.</p>
                 </div>
               </div>
               <div class="item">
                 <div class="item_inner">
                   <div class="image">
-                    <img src="images/3ptDEOjvnzVS.jpg" alt="Services Image">
+                    <img src="images/3ptDEOjvnzVS.jpg" alt="Corporate Events">
                     <a href="#"></a>
                   </div>
                   <h3><a href="#">Corporate Events</a></h3>
-                  <p>Impress at work events—enjoy sophisticated service and delicious cuisine, turning business
-                    gatherings into memorable and tasteful experiences for everyone.</p>
+                  <p>Professional catering that leaves a lasting impression. Perfect for meetings, galas, and office
+                    celebrations.</p>
                 </div>
               </div>
 
@@ -824,18 +824,23 @@
           </div>
         </div>
         <div class="col-md-4" data-aos="zoom-in-top" data-aos-duration="3000">
-          <h2 class="heading">Our   Services</h2>
+          <h2 class="heading">Our Packages</h2>
           <hr class="heading_space">
           <ul class="menu_widget">
-            <li>Basic<span>Veg</span></li>
-            <li>Basic<span>Non-Veg</span></li>
-            <li>Gold<span>Veg</span></li>
-            <li>Gold<span>Non-Veg</span></li>
-            <li>Wedding<span>Veg</span></li>
-            <li>Reception<span>Non-Veg</span></li>
-            <li>Global<span>Veg</span></li>
-            <li>Consolidated<span>Non-Veg</span></li>
+            <li>Basic <span>Veg Menu</span></li>
+            <li>Premium <span>Veg Menu</span></li>
+            <li>Gold <span>Veg Menu</span></li>
+            <li>Royal <span>Veg Menu</span></li>
+            <li>Basic <span>Non-Veg</span></li>
+            <li>Premium <span>Non-Veg</span></li>
+            <li>Gold <span>Non-Veg</span></li>
+            <li>Royal <span>Non-Veg</span></li>
           </ul>
+          <div class="working-hours mt-4" style="margin-top: 30px;">
+            <h3 style="font-size: 20px; font-weight: 600; margin-bottom: 15px;">Working Hours</h3>
+            <p><strong>Mon - Sun:</strong> 9:00 AM - 11:00 PM</p>
+            <p><strong>Support:</strong> 24/7 Available</p>
+          </div>
           <!--<h3>Other Special Menu</h3>-->
           <!--<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse <strong>molestie consequat</strong>, vel illum dolore nulla facilisis.</p>-->
         </div>
