--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
               <div class="item">
                 <div class="item_inner">
                   <div class="image">
-                    <img src="images/wJ4pMay2nh0j.jpg" alt="Weddings">
+                    <img src="rajeshimedia/marriage.png" alt="Weddings">
                     <a href="#"></a>
                   </div>
                   <h3><a href="#">Weddings</a></h3>
@@ -765,7 +765,7 @@
               <div class="item">
                 <div class="item_inner">
                   <div class="image">
-                    <img src="images/4k0fzHpzEB0B.jpg" alt="Birthday Parties">
+                    <img src="rajeshimedia/birthday.png" Birthday Parties">
                     <a href="#"></a>
                   </div>
                   <h3><a href="#">Birthday Bashes</a></h3>
@@ -776,7 +776,7 @@
               <div class="item">
                 <div class="item_inner">
                   <div class="image">
-                    <img src="images/bBLYbDv8ry4j.jpg" alt="Traditional Ceremonies">
+                    <img src="rajeshimedia/Traditionally.png" alt="Traditional Ceremonies">
                     <a href="#"></a>
                   </div>
                   <h3><a href="#">Traditional Feasts</a></h3>
@@ -787,7 +787,7 @@
               <div class="item">
                 <div class="item_inner">
                   <div class="image">
-                    <img src="images/MV6RNUbt0UPZ.jpg" alt="Housewarming">
+                    <img src="rajeshimedia/Housewarming .png" alt="Housewarming">
                     <a href="#"></a>
                   </div>
                   <h3><a href="#">Housewarming</a></h3>
@@ -799,7 +799,7 @@
               <div class="item">
                 <div class="item_inner">
                   <div class="image">
-                    <img src="images/BrJOAuXgq85L.jpg" alt="Private Parties">
+                    <img src="rajeshimedia/private.png" alt="Private Parties">
                     <a href="#"></a>
                   </div>
                   <h3><a href="#">Private Gatherings</a></h3>
@@ -810,7 +810,7 @@
               <div class="item">
                 <div class="item_inner">
                   <div class="image">
-                    <img src="images/3ptDEOjvnzVS.jpg" alt="Corporate Events">
+                    <img src="rajeshimedia/CorporateEvents.png" alt="Corporate Events">
                     <a href="#"></a>
                   </div>
                   <h3><a href="#">Corporate Events</a></h3>
