--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@
               <div class="item">
                 <div class="item_inner">
                   <div class="image">
-                    <img src="rajeshimedia/CorporateEvents.png" alt="Corporate Events">
+                    <img src="rajeshimedia/" alt="Corporate Events">
                     <a href="#"></a>
                   </div>
                   <h3><a href="#">Corporate Events</a></h3>
@@ -824,7 +824,7 @@
           </div>
         </div>
         <div class="col-md-4" data-aos="zoom-in-top" data-aos-duration="3000">
-          <h2 class="heading">Our Packages</h2>
+          <h2 class="heading">Our Special Menus</h2>
           <hr class="heading_space">
           <ul class="menu_widget">
             <li>Basic <span>Veg Menu</span></li>
