--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
   <!--Loader-->
   <div class="loader">
     <div class="loader-content">
-      <img src="rajeshimedia/logo.png" alt="Sree Rajesh Caterers" class="loader-logo">
+      <img loading="lazy" src="rajeshimedia/logo.png" alt="Sree Rajesh Caterers" class="loader-logo">
     </div>
   </div>
 
@@ -673,7 +673,7 @@
                   <span class="icon-bar top-bar"></span> <span class="icon-bar middle-bar"></span> <span
                     class="icon-bar bottom-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="rajeshimedia/logo.png" alt="logo"
+                <a class="navbar-brand" href="index.html"><img loading="lazy" src="rajeshimedia/logo.png" alt="logo"
                     class="img-responsive logo-image" data-aos="zoom-in" data-aos-duration="3000"></a>
               </div>
 
@@ -743,13 +743,13 @@
     <!-- The slideshow -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="images/ISVTUekk0h7k.jpg" alt="Los Angeles">
+        <img loading="lazy" src="images/ISVTUekk0h7k.jpg" alt="Los Angeles">
       </div>
       <div class="item">
-        <img src="images/prh6MLijpDyJ.jpg" alt="Chicago">
+        <img loading="lazy" src="images/prh6MLijpDyJ.jpg" alt="Chicago">
       </div>
       <div class="item">
-        <img src="images/Vz3EXYbsfpTi.jpg" alt="New York">
+        <img loading="lazy" src="images/Vz3EXYbsfpTi.jpg" alt="New York">
       </div>
     </div>
 
@@ -798,24 +798,24 @@
         <div class="col-lg-6 offset-lg-1 mt-lg-0 mt-5">
           <div class="row g-3" style="display: flex; flex-wrap: wrap;">
             <div style="flex: 0 0 33.33%; max-width: 33.33%; padding: 5px;">
-              <video src="rajeshimedia/1.mp4" autoplay muted loop playsinline class="img-fluid radius-image"
-                data-aos="fade-down" data-aos-duration="1500"
+              <video preload="metadata" src="rajeshimedia/1.mp4" autoplay muted loop playsinline
+                class="img-fluid radius-image" data-aos="fade-down" data-aos-duration="1500"
                 style="width: 100%; height: 180px; object-fit: cover;"></video>
             </div>
             <div style="flex: 0 0 33.33%; max-width: 33.33%; padding: 5px;">
-              <video src="rajeshimedia/2.mp4" autoplay muted loop playsinline class="img-fluid radius-image"
-                data-aos="fade-down" data-aos-duration="2000"
+              <video preload="metadata" src="rajeshimedia/2.mp4" autoplay muted loop playsinline
+                class="img-fluid radius-image" data-aos="fade-down" data-aos-duration="2000"
                 style="width: 100%; height: 180px; object-fit: cover;"></video>
             </div>
             <div style="flex: 0 0 33.33%; max-width: 33.33%; padding: 5px;">
-              <video src="rajeshimedia/3.mp4" autoplay muted loop playsinline class="img-fluid radius-image"
-                data-aos="fade-up" data-aos-duration="2500"
+              <video preload="metadata" src="rajeshimedia/3.mp4" autoplay muted loop playsinline
+                class="img-fluid radius-image" data-aos="fade-up" data-aos-duration="2500"
                 style="width: 100%; height: 180px; object-fit: cover;"></video>
             </div>
             <div style="display: flex; justify-content: center; width: 100%; padding: 5px;">
               <div style="flex: 0 0 100%; max-width: 100%;">
-                <video src="rajeshimedia/4.mp4" autoplay muted loop playsinline class="img-fluid radius-image"
-                  data-aos="fade-up" data-aos-duration="3000"
+                <video preload="metadata" src="rajeshimedia/4.mp4" autoplay muted loop playsinline
+                  class="img-fluid radius-image" data-aos="fade-up" data-aos-duration="3000"
                   style="width: 100%; height: 300px; object-fit: cover;"></video>
               </div>
             </div>
@@ -838,7 +838,7 @@
               <div class="item">
                 <div class="item_inner">
                   <div class="image">
-                    <img src="rajeshimedia/marriage.png" alt="Weddings">
+                    <img loading="lazy" src="rajeshimedia/marriage.png" alt="Weddings">
                     <a href="#"></a>
                   </div>
                   <h3><a href="#">Weddings</a></h3>
@@ -849,7 +849,7 @@
               <div class="item">
                 <div class="item_inner">
                   <div class="image">
-                    <img src="rajeshimedia/birthday.png" Birthday Parties">
+                    <img loading="lazy" src="rajeshimedia/birthday.png" Birthday Parties">
                     <a href="#"></a>
                   </div>
                   <h3><a href="#">Birthday Bashes</a></h3>
@@ -860,7 +860,7 @@
               <div class="item">
                 <div class="item_inner">
                   <div class="image">
-                    <img src="rajeshimedia/Traditionally.png" alt="Traditional Ceremonies">
+                    <img loading="lazy" src="rajeshimedia/Traditionally.png" alt="Traditional Ceremonies">
                     <a href="#"></a>
                   </div>
                   <h3><a href="#">Traditional Feasts</a></h3>
@@ -871,7 +871,7 @@
               <div class="item">
                 <div class="item_inner">
                   <div class="image">
-                    <img src="rajeshimedia/Housewarming .png" alt="Housewarming">
+                    <img loading="lazy" src="rajeshimedia/Housewarming .png" alt="Housewarming">
                     <a href="#"></a>
                   </div>
                   <h3><a href="#">Housewarming</a></h3>
@@ -883,7 +883,7 @@
               <div class="item">
                 <div class="item_inner">
                   <div class="image">
-                    <img src="rajeshimedia/private.png" alt="Private Parties">
+                    <img loading="lazy" src="rajeshimedia/private.png" alt="Private Parties">
                     <a href="#"></a>
                   </div>
                   <h3><a href="#">Private Gatherings</a></h3>
@@ -894,7 +894,7 @@
               <div class="item">
                 <div class="item_inner">
                   <div class="image">
-                    <img src="rajeshimedia/CorporateEvents.png" alt="Corporate Events">
+                    <img loading="lazy" src="rajeshimedia/CorporateEvents.png" alt="Corporate Events">
                     <a href="#"></a>
                   </div>
                   <h3><a href="#">Corporate Events</a></h3>
@@ -1001,7 +1001,8 @@
     <div class="container-fluid pb-lg-5 pb-md-4 pb-2">
       <div class="row align-items-center m-0">
         <div class="col-lg-6">
-          <img src="images/Why-Choose-Us.jpg" alt="" class="img-fluid" data-aos="fade-bottom" data-aos-duration="3000">
+          <img loading="lazy" src="images/Why-Choose-Us.jpg" alt="" class="img-fluid" data-aos="fade-bottom"
+            data-aos-duration="3000">
         </div>
         <div class="container col-lg-6 ps-xl-5 ps-lg-4 mt-lg-0 mt-5 features">
           <h5 class="sub-title">Our Features</h5>
@@ -1055,7 +1056,7 @@
     <div class="projects-grids">
       <div class="istagram-feeds">
         <div class="projects-w3l-grid-info">
-          <a href=""><img src="images/sTmpn9N6wTEw.jpg" class="img-fluid" alt="">
+          <a href=""><img loading="lazy" src="images/sTmpn9N6wTEw.jpg" class="img-fluid" alt="">
             <div class="content-overlay"></div>
             <div class="content-details fadeIn-top">
               <span class="fa fa-instagram"></span>
@@ -1063,7 +1064,7 @@
           </a>
         </div>
         <div class="projects-w3l-grid-info">
-          <a href=""><img src="images/yixRdmWU0TIz.jpg" class="img-fluid" alt="">
+          <a href=""><img loading="lazy" src="images/yixRdmWU0TIz.jpg" class="img-fluid" alt="">
             <div class="content-overlay"></div>
             <div class="content-details fadeIn-top">
               <span class="fa fa-instagram"></span>
@@ -1071,7 +1072,7 @@
           </a>
         </div>
         <div class="projects-w3l-grid-info">
-          <a href=""><img src="images/ngvV5TtKv96B.jpg" class="img-fluid" alt="">
+          <a href=""><img loading="lazy" src="images/ngvV5TtKv96B.jpg" class="img-fluid" alt="">
             <div class="content-overlay"></div>
             <div class="content-details fadeIn-top">
               <span class="fa fa-instagram"></span>
@@ -1079,7 +1080,7 @@
           </a>
         </div>
         <div class="projects-w3l-grid-info">
-          <a href=""><img src="images/7wnsU6vuxVZK.jpg" class="img-fluid" alt="">
+          <a href=""><img loading="lazy" src="images/7wnsU6vuxVZK.jpg" class="img-fluid" alt="">
             <div class="content-overlay"></div>
             <div class="content-details fadeIn-top">
               <span class="fa fa-instagram"></span>
@@ -1087,7 +1088,7 @@
           </a>
         </div>
         <div class="projects-w3l-grid-info">
-          <a href=""><img src="images/VXY4qetKK1ok.jpg" class="img-fluid" alt="">
+          <a href=""><img loading="lazy" src="images/VXY4qetKK1ok.jpg" class="img-fluid" alt="">
             <div class="content-overlay"></div>
             <div class="content-details fadeIn-top">
               <span class="fa fa-instagram"></span>
@@ -1095,7 +1096,7 @@
           </a>
         </div>
         <div class="projects-w3l-grid-info">
-          <a href=""><img src="images/oDG67TE1fOAE.jpg" class="img-fluid" alt="">
+          <a href=""><img loading="lazy" src="images/oDG67TE1fOAE.jpg" class="img-fluid" alt="">
             <div class="content-overlay"></div>
             <div class="content-details fadeIn-top">
               <span class="fa fa-instagram"></span>
@@ -1103,7 +1104,7 @@
           </a>
         </div>
         <div class="projects-w3l-grid-info">
-          <a href=""><img src="images/m27FBgqETdFq.jpg" class="img-fluid" alt="">
+          <a href=""><img loading="lazy" src="images/m27FBgqETdFq.jpg" class="img-fluid" alt="">
             <div class="content-overlay"></div>
             <div class="content-details fadeIn-top">
               <span class="fa fa-instagram"></span>
@@ -1111,7 +1112,7 @@
           </a>
         </div>
         <div class="projects-w3l-grid-info">
-          <a href=""><img src="images/TKkJmlALFGYx.jpg" class="img-fluid" alt="">
+          <a href=""><img loading="lazy" src="images/TKkJmlALFGYx.jpg" class="img-fluid" alt="">
             <div class="content-overlay"></div>
             <div class="content-details fadeIn-top">
               <span class="fa fa-instagram"></span>
