--- a/index.html
+++ b/index.html
@@ -75,6 +75,19 @@
       text-align: center;
     }
 
+    .feature i {
+      font-size: 28px;
+      background: #CC2027;
+      color: #fff;
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      line-height: 60px;
+      text-align: center;
+      margin-bottom: 20px;
+      display: inline-block;
+    }
+
     .fa-utensils:before {
       content: "\f2e7";
     }
@@ -944,34 +957,35 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <h2 class="heading">Our Specialities</h2>
+          <h2 class="heading">OUR SPECIALITIES</h2>
           <hr class="heading_space">
         </div>
       </div>
       <div class="row" data-aos="fade-up" data-aos-duration="3000">
         <div class="col-md-3 col-sm-6 feature text-center">
           <i class="icon-glass"></i>
-          <h3><a href="">Separate veg & non-veg food</a></h3>
-          <p>Enjoy a diverse culinary experience with our separate vegetarian and non-vegetarian menus, catering to
-            every palate at your event.</p>
+          <h3><a href="">Pure & Distinct Kitchens</a></h3>
+          <p>We maintain strict separation in our kitchens and execution to respect all dietary preferences. Enjoy pure,
+            authentic vegetarian flavors and succulent non-vegetarian delicacies, cooked and served with absolute
+            integrity.</p>
         </div>
         <div class="col-md-3 col-sm-6 feature text-center">
           <i class="icon-coffee"></i>
-          <h3><a href="">Experienced Cooks & Staff</a></h3>
-          <p>Our events are in the hands of seasoned professionals—experienced cooks and staff ensuring a seamless,
-            delightful, and memorable catering experience.</p>
+          <h3><a href="">Expert Chefs & Hospitality</a></h3>
+          <p>Our team consists of master chefs with decades of experience and courteous, uniformed staff trained in
+            hospitality. We ensure your guests are treated like royalty with seamless, attentive service.</p>
         </div>
         <div class="col-md-3 col-sm-6 feature text-center">
           <i class="icon-glass"></i>
-          <h3><a href="" style="color: #CC2027;">Service available across Hyderabad</a></h3>
-          <p>Wherever you are in Hyderabad, our catering service comes to you, ensuring your events are infused with
-            delicious flavors and impeccable service.</p>
+          <h3><a href="" style="color: #CC2027;">Seamless Service Citywide</a></h3>
+          <p>From the heart of the city to the outskirts, we bring our culinary excellence to your doorstep anywhere in
+            Hyderabad. Our logistics ensure food arrives fresh, hot, and on time, no matter the location.</p>
         </div>
         <div class="col-md-3 col-sm-6 feature text-center">
           <i class="icon-coffee"></i>
-          <h3><a href="">Cooking as per preferences of region</a></h3>
-          <p>Taste the authenticity of your region with our customized cooking—catering to your preferences, ensuring
-            every dish reflects the flavors you love.</p>
+          <h3><a href="">Authentic Regional Cuisines</a></h3>
+          <p> whether it's the spice of Telangana, the richness of Andhra, or North Indian subtleties, we customize our
+            cooking style to match your specific regional palate, delivering the comfortable taste of home.</p>
         </div>
       </div>
 
