--- a/index.html
+++ b/index.html
@@ -79,13 +79,15 @@
       font-size: 28px;
       background: #CC2027;
       color: #fff;
-      width: 60px;
-      height: 60px;
+      width: 70px;
+      height: 70px;
       border-radius: 50%;
-      line-height: 60px;
+      line-height: 64px;
       text-align: center;
       margin-bottom: 20px;
       display: inline-block;
+      border: 3px solid #fff;
+      box-shadow: 0 0 0 1px #CC2027;
     }
 
     .fa-utensils:before {
@@ -963,26 +965,26 @@
       </div>
       <div class="row" data-aos="fade-up" data-aos-duration="3000">
         <div class="col-md-3 col-sm-6 feature text-center">
-          <i class="icon-glass"></i>
+          <i class="fa fa-utensils"></i>
           <h3><a href="">Pure & Distinct Kitchens</a></h3>
           <p>We maintain strict separation in our kitchens and execution to respect all dietary preferences. Enjoy pure,
             authentic vegetarian flavors and succulent non-vegetarian delicacies, cooked and served with absolute
             integrity.</p>
         </div>
         <div class="col-md-3 col-sm-6 feature text-center">
-          <i class="icon-coffee"></i>
+          <i class="fa fa-users"></i>
           <h3><a href="">Expert Chefs & Hospitality</a></h3>
           <p>Our team consists of master chefs with decades of experience and courteous, uniformed staff trained in
             hospitality. We ensure your guests are treated like royalty with seamless, attentive service.</p>
         </div>
         <div class="col-md-3 col-sm-6 feature text-center">
-          <i class="icon-glass"></i>
+          <i class="fa fa-truck"></i>
           <h3><a href="" style="color: #CC2027;">Seamless Service Citywide</a></h3>
           <p>From the heart of the city to the outskirts, we bring our culinary excellence to your doorstep anywhere in
             Hyderabad. Our logistics ensure food arrives fresh, hot, and on time, no matter the location.</p>
         </div>
         <div class="col-md-3 col-sm-6 feature text-center">
-          <i class="icon-coffee"></i>
+          <i class="fa fa-fire"></i>
           <h3><a href="">Authentic Regional Cuisines</a></h3>
           <p> whether it's the spice of Telangana, the richness of Andhra, or North Indian subtleties, we customize our
             cooking style to match your specific regional palate, delivering the comfortable taste of home.</p>
