--- a/index.html
+++ b/index.html
@@ -995,7 +995,7 @@
   </section>
 
   <!-- image with content -->
-  <section class="info_section paralax">
+  <section class="info_section paralax" style="background-image: url('rajeshimedia/herobackground.png');">
     <div class="container">
       <div class="row">
         <div class="col-md-2"> </div>
