--- a/index.html
+++ b/index.html
@@ -746,26 +746,28 @@
     </div>
   </header>
 
-  <div id="demo" class="carousel slide" data-ride="carousel">
+  <div id="demo" class="carousel slide" data-ride="carousel" data-interval="3000">
 
     <!-- Indicators -->
     <ul class="carousel-indicators">
       <li data-target="#demo" data-slide-to="0" class="active"></li>
       <li data-target="#demo" data-slide-to="1"></li>
-      <li data-target="#demo" data-slide-to="2"></li>
+      <!-- <li data-target="#demo" data-slide-to="2"></li> -->
     </ul>
 
     <!-- The slideshow -->
     <div class="carousel-inner">
       <div class="item active">
-        <img loading="lazy" src="images/ISVTUekk0h7k.jpg" alt="Los Angeles">
+        <img loading="lazy" src="rajeshimedia/hero1.png" alt="Hero 1">
       </div>
       <div class="item">
-        <img loading="lazy" src="images/prh6MLijpDyJ.jpg" alt="Chicago">
+        <img loading="lazy" src="rajeshimedia/hero2.png" alt="Hero 2">
       </div>
+      <!--
       <div class="item">
         <img loading="lazy" src="images/Vz3EXYbsfpTi.jpg" alt="New York">
       </div>
+      -->
     </div>
 
     <!-- Left and right controls -->
@@ -1017,7 +1019,7 @@
     <div class="container-fluid pb-lg-5 pb-md-4 pb-2">
       <div class="row align-items-center m-0">
         <div class="col-lg-6">
-          <img loading="lazy" src="images/Why-Choose-Us.jpg" alt="" class="img-fluid" data-aos="fade-bottom"
+          <img loading="lazy" src="rajeshimedia/homeabout.png" alt="" class="img-fluid" data-aos="fade-bottom"
             data-aos-duration="3000">
         </div>
         <div class="container col-lg-6 ps-xl-5 ps-lg-4 mt-lg-0 mt-5 features">
@@ -1028,36 +1030,36 @@
             <div class="grids_info">
               <i class="fa fa-trophy" data-aos="zoom-in" data-aos-duration="3000"></i>
               <div class="detail">
-                <h4>Vast Knowledge of Regional Cuisines</h4>
-                <p class="learn" style="color:#707070;">Immerse your events in authentic flavors with our extensive
-                  knowledge of regional cuisines, ensuring a culinary journey for every palate.
-                </p>
+                <h4>Mastery of Authentic Flavors</h4>
+                <p class="learn" style="color:#707070;">Immerse your guests in a culinary journey defined by deep
+                  tradition. We don't just cook; we craft authentic experiences that honor the true essence of every
+                  regional cuisine.</p>
               </div>
             </div>
             <div class="grids_info mt-3">
               <i class="fa fa-trophy" data-aos="zoom-in" data-aos-duration="3000"></i>
               <div class="detail">
-                <h4>Exhaustive & Customized Menus</h4>
-                <p class="learn" style="color:#707070;">Choose from our exhaustive and customized menus, tailored to
-                  your preferences, promising a diverse and delightful dining experience for your guests.
-                </p>
+                <h4>Bespoke Culinary Journeys</h4>
+                <p class="learn" style="color:#707070;">Your event is unique, and your menu should be too. Choose from
+                  our exhaustive repertoire or let us design a completely customized dining experience tailored to your
+                  specific vision.</p>
               </div>
             </div>
             <div class="grids_info infogrid mt-xl-5 mt-lg-4 mt-5">
               <i class="fa fa-users" data-aos="zoom-in" data-aos-duration="3000"></i>
               <div class="detail">
-                <h4>Staff Who Serve and Delight Customers</h4>
-                <p class="learn" style="color:#707070;">Our dedicated staff goes beyond service—they serve joy, ensuring
-                  your guests are delighted at every moment, making your event truly special.
-                </p>
+                <h4>Impeccable White-Glove Service</h4>
+                <p class="learn" style="color:#707070;">Our dedicated staff delivers more than just service—they bring
+                  joy and elegance to every interaction, ensuring your guests feel truly honored and delighted
+                  throughout the event.</p>
               </div>
             </div>
             <div class="grids_info infogrid mt-xl-5 mt-lg-4 mt-5">
               <i class="fa fa-hourglass" data-aos="zoom-in" data-aos-duration="3000"></i>
               <div class="detail">
-                <h4>Wide Range of Events Experience</h4>
-                <p class="learn">With a rich history of catering to various events, Sree Rajesh Caterers brings a wealth
-                  of experience, making us your reliable partner for any occasion.</p>
+                <h4>Legacy of Grand Celebrations</h4>
+                <p class="learn">With over 25 years of excellence in executing thousands of diverse events, Sree Rajesh
+                  Caterers brings a heritage of reliability and perfection to your most important occasions.</p>
               </div>
             </div>
           </div>
